--- a/src/transitions.css
+++ b/src/transitions.css
@@ -25,7 +25,6 @@
 	position: fixed; left: 0; top: 40%;
 	z-index: 1;
 	background: #26baa4;
-	opacity: .7;
 	color: white;
 	font-size: 1rem;
 	padding: 10px 10px;
@@ -33,9 +32,9 @@
 	-webkit-transition: all .3s ease;
 	-o-transition: all .3s ease;
 	transition: all .3s ease;
+	overflow: hidden;
 }
 .floating-link:hover {
 	width: 5rem !important;
 	color: white !important;
-	opacity: 1;
 }
