re-position floating download link

--- a/src/transitions.css
+++ b/src/transitions.css
@@ -22,13 +22,13 @@
 
 /* floating download link */
 .floating-link {
-	position: fixed; left: 0; top: 40%;
+	position: fixed; right: 0; top: 40%;
 	z-index: 1;
 	background: #26baa4;
 	color: white;
 	font-size: 1rem;
 	padding: 10px 10px;
-	border-radius: 0 8rem 8rem 0;
+	border-radius: 8rem 0 0 8rem;
 	-webkit-transition: all .3s ease;
 	-o-transition: all .3s ease;
 	transition: all .3s ease;
